src/objects/Association_Contact_Association__c.object
<CustomObject>
    <description>Link between Mobile User Contacts and Associations, primarily Alsur to facilitate record sharing in the TaroWorks app</description>
    <fields>
        <fullName>Association_Name__c</fullName>
        <formula>Association__r.Name</formula>
        <label>Association Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Association__c</fullName>
        <label>Association</label>
        <referenceTo>Association__c</referenceTo>
        <relationshipLabel>Association Contact Associations</relationshipLabel>
        <relationshipName>Association_Contact_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Association Contact Associations</relationshipLabel>
        <relationshipName>Association_Contact_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Association Contact Association</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Association Contact Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Association Contact Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>